# xfce4-xkb-plugin

./: .cppcheck-false-positives  .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  configure.in.in  meson.build  meson_options.txt  module.xml
flags/: Makefile.am  Makefile.in  meson.build
icons/: Makefile.am  meson.build
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/32x32/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  Makefile.in  meson.build  xfce4-xkb-plugin-private.h  xfce4-xkb-plugin.c  xfce4-xkb-plugin.h  xkb-cairo.c  xkb-cairo.h  xkb-callbacks.c  xkb-callbacks.h  xkb-config.c  xkb-config.h  xkb-dialog.c  xkb-dialog.h  xkb-keyboard.c  xkb-keyboard.h  xkb-modifier.c  xkb-modifier.h  xkb-plugin.c  xkb-plugin.desktop.in  xkb-plugin.desktop.in.in  xkb-plugin.h  xkb-properties.h  xkb-settings-dialog.c  xkb-settings-dialog.h  xkb-util.c  xkb-util.h  xkb-xfconf.c  xkb-xfconf.h  xkb.c  xkb.desktop.in  xkb.h
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lo.po  lt.po  lv.po  ms.po  nb.po  nl.po  (+25 more)
