flagsdir = $(datadir)/xfce4/xkb/flags

flags_DATA = ae.svg \
			al.svg \
			am.svg \
			ar.svg \
			at.svg \
			az.svg \
			ba.svg \
			ben.svg \
			be.svg \
			bg.svg \
			bh.svg \
			br.svg \
			by.svg \
			ca.svg \
			ch.svg \
			cu.svg \
			cz.svg \
			de.svg \
			dev.svg \
			dj.svg \
			dk.svg \
			dvorak.svg \
			dz.svg \
			ee.svg \
			eg.svg \
			epo.svg \
			es.svg \
			fi.svg \
			fo.svg \
			fr.svg \
			gb.svg \
			ge.svg \
			gr.svg \
			hr.svg \
			hu.svg \
			ie.svg \
			il.svg \
			iq.svg \
			ir.svg \
			is.svg \
			it.svg \
			jo.svg \
			jp.svg \
			km.svg \
			kp.svg \
			kr.svg \
			kw.svg \
			la.svg \
			lb.svg \
			lt.svg \
			lv.svg \
			ly.svg \
			ma.svg \
			mk.svg \
			mm.svg \
			mn.svg \
			mt.svg \
			mx.svg \
			nl.svg \
			no.svg \
			om.svg \
			pl.svg \
			pt.svg \
			qa.svg \
			ro.svg \
			rs.svg \
			ru.svg \
			sa.svg \
			sd.svg \
			se.svg \
			si.svg \
			sk.svg \
			so.svg \
			sr.svg \
			sy.svg \
			th.svg \
			tn.svg \
			tr.svg \
			ua.svg \
			us.svg \
			uy.svg \
			uz.svg \
			vn.svg \
			ye.svg

EXTRA_DIST = $(flags_DATA)
